--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -17,5 +17,6 @@ services:
       - ./log:/var/log/nginx
       - ./entrypoint.sh:/entrypoint.sh:ro
       - ./nginx.conf:/etc/nginx/nginx.conf:ro
+      - ./default-site:/etc/nginx/default-site:ro
       - ./ssl-dhparams.pem:/ssl-dhparams.pem:ro
     network_mode: host
