--- a/nginx.conf
+++ b/nginx.conf
@@ -18,7 +18,9 @@ events {
 # based on https://gist.github.com/plentz/6737338
 http {
 
-        client_max_body_size 5k;
+        client_header_buffer_size 1k;
+        client_body_buffer_size 1k;
+        client_max_body_size 1k;
 
         keepalive_timeout 0;
 
@@ -75,7 +77,7 @@ http {
         # Logging Settings
         ##
 
-        log_format custom_access_log_format '[$time_local, $request_time] [$proxy_add_x_forwarded_for]:$remote_port "$scheme://$host" "$request" $request_length $content_length $status "$http_referer" "$http_user_agent"';
+        log_format custom_access_log_format '[$time_local, $request_time] [$proxy_add_x_forwarded_for]:$remote_port "$scheme://$host" $status "$request" $content_length $request_length "$http_referer" "$http_user_agent"';
 
         access_log /var/log/nginx/access.log custom_access_log_format;
 
