--- a/nginx.conf
+++ b/nginx.conf
@@ -77,7 +77,7 @@ http {
         # Logging Settings
         ##
 
-        log_format custom_access_log_format '[$time_local, $request_time] [$proxy_add_x_forwarded_for]:$remote_port "$scheme://$host" $status "$request" $content_length $request_length "$http_referer" "$http_user_agent"';
+        log_format custom_access_log_format escape=json '{"time":$msec,"took":$request_time,"addr":"$proxy_add_x_forwarded_for","port":"$remote_port","server":"$scheme://$host","status_code":$status,"http_request":"$request","content_length":"$content_length","request_length":"$request_length","referer":"$http_referer","ua":"$http_user_agent"}';
 
         access_log /var/log/nginx/access.log custom_access_log_format;
 
